# SEDER-Media-Suite-DIT-Tool

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md
.github/workflows/: auto-tag.yml  ci.yml  release.yml
assets/: icon.icns
qt/: CMakeLists.txt  README.md
qt/cpp/: AppController.cpp  AppController.h  DestinationItem.cpp  DestinationItem.h  DestinationListModel.cpp  DestinationListModel.h  DitCompareWorker.cpp  DitCompareWorker.h  DitFilterProxyModel.cpp  DitFilterProxyModel.h  DitOffloadWorker.cpp  DitOffloadWorker.h  DitResult.h  DitResultModel.cpp  DitResultModel.h  SederFfi.cpp  SederFfi.h  SettingsStore.cpp  SettingsStore.h  ThemeController.cpp  ThemeController.h  main.cpp  seder_ffi.h
qt/qml/: AboutDialog.qml  DenseTextField.qml  FieldLabel.qml  Main.qml  MetaLabel.qml  PathPicker.qml  PreferencesDialog.qml  QuietButton.qml  StyledCheckBox.qml  StyledComboBox.qml  StyledProgressBar.qml
qt/tests/: dit_model_tests.cpp
scripts/: generate-icons.py  package-linux.sh  package-macos.sh  package-windows.ps1  package_common.py  release-artifacts.sh
src/: ffi.rs  lib.rs  media_core.rs  report.rs
src/media_core/: tests.rs
src/offload/: engine.rs  hash.rs  media.rs  mod.rs  progress.rs  template.rs  verify.rs  volume.rs
tests/: integration.rs
